<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MusicApp</string>

    <string name="close">Đóng</string>
    <string name="menu">Menu</string>
    <string name="now_playing">ĐANG PHÁT</string>
    <string name="download">Download</string>
    <string name="cover_image">Ảnh bìa</string>

    <string name="repeat">Lặp lại</string>
    <string name="previous">Bài trước</string>
    <string name="playpause">Phát/Tạm dừng</string>
    <string name="next">Bài tiếp</string>
    <string name="shuffle">Ngẫu nhiên</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="song_title_placeholder">Tên bài hát</string>
    <string name="artist_placeholder">Nghệ sĩ</string>
    <string name="tab_favorites">Yêu thích</string>
    <string name="tab_recent">Gần đây</string>

    <string name="tab_all_songs">Tất cả</string>
    <string name="tab_mp3_songs">Yêu thích</string>
    <string name="tab_recent_songs">Nghệ sĩ</string>
    <string name="title_your_library">ProMusic</string>
    <string name="chip_playlists">Playlist</string>
    <string name="chip_artists">Nghệ sĩ</string>
    <string name="chip_albums">Album</string>
    <string name="action_shuffle_all">Phát ngẫu nhiên</string>
    <string name="toast_no_songs">Không tìm thấy bài hát nào để phát.</string>
    <string name="empty_song_list">Không có bài hát nào</string>
    <string name="permission_audio_needed">Ứng dụng cần quyền đọc file âm thanh để hiển thị danh sách.</string>
    <string name="service_not_ready">Dịch vụ phát nhạc chưa sẵn sàng.</string>
</resources>
